force-app/main/default/objects/CourseProgress__c/CourseProgress__c.object-meta.xml
<CustomObject>
    <label>CourseProgress</label>
    <nameField>
        <displayFormat>CP-{0}</displayFormat>
        <label>CourseProgress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CourseProgresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>