force-app/main/default/objects/CourseProgress__c/fields/Course_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Course_Feedback__c</fullName>
    <label>Course Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>