force-app/main/default/objects/CourseProgress__c/fields/Course_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Status__c</fullName>
    <label>Course Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahead of Schedule</fullName>
            </value>
            <value>
                <fullName>As Per Schedule</fullName>
            </value>
            <value>
                <fullName>Lagging Behind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>