force-app/main/default/objects/CourseProgress__c/fields/CourseConnection__c.field-meta.xml
<CustomField>
    <fullName>CourseConnection__c</fullName>
    <label>CourseConnection</label>
    <referenceTo>CourseConnection__c</referenceTo>
    <relationshipLabel>CourseProgresses</relationshipLabel>
    <relationshipName>CourseProgresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>