force-app/main/default/objects/CourseProgress__c/fields/Module10_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Module10_Completion_Date__c</fullName>
    <label>Module10 Completion Date</label>
    <type>Date</type>
</CustomField>