force-app/main/default/objects/CourseProgress__c/fields/Module11_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Module11_Completion_Date__c</fullName>
    <label>Module11 Completion Date</label>
    <type>Date</type>
</CustomField>