force-app/main/default/objects/CourseProgress__c/fields/Module12_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Module12_Completion_Date__c</fullName>
    <label>Module12 Completion Date</label>
    <type>Date</type>
</CustomField>