force-app/main/default/objects/CourseProgress__c/fields/Module_10_feedback__c.field-meta.xml
<CustomField>
    <fullName>Module_10_feedback__c</fullName>
    <label>Module 10 feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>