force-app/main/default/objects/CourseProgress__c/fields/Module_10_Grade__c.field-meta.xml
<CustomField>
    <fullName>Module_10_Grade__c</fullName>
    <label>Module 10 Grade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>