force-app/main/default/objects/CourseProgress__c/fields/Module_11_Grade__c.field-meta.xml
<CustomField>
    <fullName>Module_11_Grade__c</fullName>
    <label>Module 11 Grade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>