force-app/main/default/objects/CourseProgress__c/fields/Module_11_Status__c.field-meta.xml
<CustomField>
    <fullName>Module_11_Status__c</fullName>
    <label>Module 11 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Module_Option</valueSetName>
    </valueSet>
</CustomField>