force-app/main/default/objects/CourseProgress__c/fields/Module_12_feedback__c.field-meta.xml
<CustomField>
    <fullName>Module_12_feedback__c</fullName>
    <label>Module 12 feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>