force-app/main/default/objects/CourseProgress__c/listViews/CRT.listView-meta.xml
<ListView>
    <fullName>CRT</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>CourseConnection__c</columns>
    <columns>Course__c</columns>
    <columns>Course_Status__c</columns>
    <columns>Module_1_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CourseProgress__c.CRT</value>
    </filters>
    <label>CRT</label>
</ListView>